--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.2.2",
     "boxen": "^7.0.1",
     "chalk": "^5.2.0",
     "express": "^4.18.2",
