--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Emad Uddin (https://emad-uddin.com)",
   "license": "MIT",
   "bin": {
-    "zkteco": "./bin/index.js"
+    "zkteco": "./bin/index.js",
+    "zktecoserver": "./bin/server.js"
   },
   "type": "module",
   "dependencies": {
@@ -17,6 +18,7 @@
     "boxen": "^7.0.1",
     "chalk": "^5.2.0",
     "express": "^4.18.2",
+    "figlet": "^1.5.2",
     "inquirer": "^9.1.4",
     "yargs": "^17.6.2"
   }
